k8s/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lr-app-deployment
  namespace: lr-app
  labels:
    app: lr-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lr-app
  template:
    metadata:
      labels:
        app: lr-app
    spec:
      containers:
        - name: lr-app
          image: allanrodriguest/lr-infra:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /posts
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /posts
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: lr-app
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: lr-app
                topologyKey: topology.kubernetes.io/zone
