k8s/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lr-app-svc
  namespace: lr-app
  labels:
    app: lr-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: lr-app
