k8s/reverse-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  namespace: lr-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine
        volumeMounts:
        - name: proxy-conf
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: proxy-conf
        configMap:
          name: proxy-conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-svc
  namespace: lr-app
spec:
  type: NodePort
  selector:
    app: nginx-proxy
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
